--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -26,3 +26,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.searchbar {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.search-input {
+  width: 60vw;
+  height: 5vh;
+  border-radius: 10px;
+}
