--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -30,6 +30,8 @@
 .searchbar {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 10px;
 }
 
@@ -37,4 +39,11 @@
   width: 60vw;
   height: 5vh;
   border-radius: 10px;
+}
+
+ul {
+  list-style: none;
+}
+
+.result {
 }
