--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -33,6 +33,7 @@
   flex-direction: column;
   align-items: center;
   padding: 10px;
+  margin-bottom: 0;
 }
 
 .search-input {
@@ -43,7 +44,15 @@
 
 ul {
   list-style: none;
+  width: 60vw;
+  padding: 0;
 }
 
 .result {
+  height: 5vh;
+  border: 1px solid black;
+  margin-bottom: 1px;
+  margin-top: 0;
+  padding: 10px 0 0 10px;
+  text-align: center;
 }
