--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -56,8 +56,14 @@ a {
 .result {
   height: 5vh;
   border: 1px solid black;
+  border-radius: 5px;
   margin-bottom: 1px;
   margin-top: 0;
   padding: 10px 0 0 10px;
   text-align: center;
+}
+
+.result:hover {
+  background-color: #d3d3d3;
+  color: white;
 }
