changed formatting of event results

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -72,3 +72,9 @@ a {
   display: flex;
   justify-content: center;
 }
+
+.event {
+  text-align: center;
+  border: 1px solid black;
+  margin-bottom: 5px;
+}
