--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -83,3 +83,9 @@ a {
   background-color: #d3d3d3;
   color: white;
 }
+
+.event_data_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
