--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -84,8 +84,15 @@ a {
   color: white;
 }
 
+.loginForm {
+  display: inline-block;
+}
+
 .event_data_container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width : 80vw;
+  margin-left: 10vw;
+  border: 1px solid black;
 }
