--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -84,10 +84,6 @@ a {
   color: white;
 }
 
-.loginForm {
-  display: inline-block;
-}
-
 .event_data_container {
   display: flex;
   flex-direction: column;
@@ -95,4 +91,23 @@ a {
   width : 80vw;
   margin-left: 10vw;
   border: 1px solid black;
+}
+
+.loginContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginForm {
+  border: 1px solid black;
+  padding: 10px 10px 10px 10px;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  display:block;
+  margin : 2px;
 }
