--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -97,6 +97,11 @@ a {
   justify-content: center;
 }
 
+.content-container {
+  display: flex;
+  justify-content: center;
+}
+
 .loginLink {
   align-self: center;
   height: 6vh;
@@ -107,14 +112,22 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 40vw;
+  height: 60vh;
+  background-color: #DCDCDC;
 }
 
 .loginForm {
+  padding: 50px 50px 50px 50px;
+  width: 15vw;
+  height: 25vh;
+  background-color: white;
   border: 1px solid black;
-  padding: 10px 10px 10px 10px;
-  width: 40vw;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 
 input {
