--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -30,8 +30,7 @@
 .searchbar {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   padding: 10px;
   margin-bottom: 0;
 }
