--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -102,7 +102,8 @@ a {
 }
 
 .loginLink {
-  align-self: center;
+  margin-top: 2vh;
+  padding-right: 1vw;
   height: 6vh;
   letter-spacing: 1px;
 }
