--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -99,7 +99,8 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width : 60vw;
+  width : 90vw;
+  height: 80vh;
   border: 1px solid black;
 }
 .navbar {
