--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -165,3 +165,12 @@ form input {
 .content-going {
   margin-bottom: 25em;
 }
+
+.add-going {
+  background-color: none;
+  border: 0.5px solid black;
+  border-radius : 5px;
+  letter-spacing: 0.5px;
+  width: 5vw;
+  height: 3vh;
+}
