--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -111,6 +111,8 @@ a {
   width : 90vw;
   height: 80vh;
   border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 2px 2px;
 }
 .navbar {
   display:flex;
