added render of my events and delete event button

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -183,3 +183,9 @@ form input {
   color: white;
   background-color: blue;
 }
+
+.delete-event {
+  display: inline;
+  float: right;
+  margin-top: 7px;
+}
